--- a/supply.html
+++ b/supply.html
@@ -1,4 +1,32 @@
-  <iframe
-    src="https://script.google.com/macros/s/AKfycbxHQ2iUepJa4TbrNUnbGk0KIjURRKKpHc0t_vp4vKxVhT9x5DLFgQbqOk37xmWsEZoCEg/exec"
-    allowfullscreen>
-  </iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Apps Script Embed</title>
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      height: 100%;
+      width: 100%;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+
+<iframe
+  src="https://script.google.com/macros/s/AKfycbxHQ2iUepJa4TbrNUnbGk0KIjURRKKpHc0t_vp4vKxVhT9x5DLFgQbqOk37xmWsEZoCEg/exec"
+  loading="lazy"
+  allowfullscreen>
+</iframe>
+
+</body>
+</html>
