--- a/supply.html
+++ b/supply.html
@@ -1,24 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Open System</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body style="display:flex;justify-content:center;align-items:center;height:100vh">
-
-<button onclick="openApp()" style="font-size:18px;padding:15px 25px">
-  OPEN SYSTEM
-</button>
-
-<script>
-function openApp() {
-  window.open(
-    "https://script.google.com/macros/s/AKfycbxHQ2iUepJa4TbrNUnbGk0KIjURRKKpHc0t_vp4vKxVhT9x5DLFgQbqOk37xmWsEZoCEg/exec",
-    "_blank"
-  );
-}
-</script>
-
-</body>
-</html>
+<div class="container" style="width: 100%; text-align: center;">
+  <iframe 
+    src="https://script.google.com/macros/s/AKfycbwa9jscaNl3ui_AGLgNNK8DbYYTlbaJ4gFkNxQTcCj3Mvhmw8Av76DDKMgbQCYwrUMJfQ/exec" 
+    width="100%" 
+    height="800px" 
+    frameborder="0" 
+    scrolling="yes"
+    style="border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+  </iframe>
+</div>
