--- a/supply.html
+++ b/supply.html
@@ -1,8 +1,8 @@
 <div class="container" style="width: 100%; text-align: center;">
   <iframe 
     src="https://script.google.com/macros/s/AKfycbwa9jscaNl3ui_AGLgNNK8DbYYTlbaJ4gFkNxQTcCj3Mvhmw8Av76DDKMgbQCYwrUMJfQ/exec" 
-    width="100%" 
-    height="800px" 
+    width="auto" 
+    height="auto" 
     frameborder="0" 
     scrolling="yes"
     style="border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
