--- a/supply.html
+++ b/supply.html
@@ -1,10 +1,35 @@
-<div class="container" style="width: 100%; text-align: center;">
-  <iframe 
-    src="https://script.google.com/macros/s/AKfycbwa9jscaNl3ui_AGLgNNK8DbYYTlbaJ4gFkNxQTcCj3Mvhmw8Av76DDKMgbQCYwrUMJfQ/exec" 
-    width="auto" 
-    height="auto" 
-    frameborder="0" 
-    scrolling="yes"
-    style="border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
-  </iframe>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>POS System - Full Screen</title>
+    <style>
+        /* Reset margins and padding to ensure the iframe fills the space */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden; /* Prevents double scrollbars */
+        }
+
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+
+    <iframe 
+        src="https://script.google.com/macros/s/AKfycbwa9jscaNl3ui_AGLgNNK8DbYYTlbaJ4gFkNxQTcCj3Mvhmw8Av76DDKMgbQCYwrUMJfQ/exec" 
+        allow="clipboard-read; clipboard-write; geolocation; microphone; camera;">
+    </iframe>
+
+</body>
+</html>
