--- a/supply.html
+++ b/supply.html
@@ -133,4 +133,70 @@
     </div>
 
     <div id="auth-panel">
-        <div style="border: 1px solid var(--cyber-
+        <div style="border: 1px solid var(--cyber-green); padding: 5px; position: relative; overflow: hidden;">
+            <div style="position: absolute; width: 100%; height: 2px; background: var(--pnp-red); animation: scan 3s linear infinite;"></div>
+            <img src="d, TAMANG BIHIS.png" alt="ID Profile" style="width: 100%; filter: grayscale(1) contrast(1.5) brightness(0.8);">
+        </div>
+        
+        <div class="title">D'TAMANG BIHIS</div>
+        <div style="font-size: 9px; color: var(--pnp-blue); letter-spacing: 2px; margin-bottom: 20px;">PNP CYBER OVERWATCH // STRAT-COM</div>
+
+        <input type="password" id="passkey" placeholder="ENTER ACCESS KEY" autocomplete="off">
+        <button class="btn-link" onclick="verify()">INITIALIZE SYNC</button>
+        <p id="msg" style="font-size: 10px; color: var(--cyber-green); margin-top: 15px;">AWAITING CREDENTIALS...</p>
+    </div>
+
+    <iframe id="content-frame" style="position:fixed; top:0; left:0; width:100%; height:100%; border:none; display:none; z-index:6000;"></iframe>
+
+    <script>
+        const SECRET = "WARRIOR";
+        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxOC3b-JTJeVLkyBKVwAsKdqz9XzbmEzp6ICAVM6ctxHGKs11JQ11C5G654aUdBebSm/exec";
+
+        // Dynamic Terminal Log
+        const logEntries = [
+            "SCANNING PACKETS...", "ENCRYPTING UPLINK...", "CHECKING PORT 8080...", 
+            "BYPASSING FIREWALL...", "ACCESSING DATABASE...", "SIGNAL STRENGTH: 98%"
+        ];
+        setInterval(() => {
+            const log = document.getElementById('log');
+            const entry = logEntries[Math.floor(Math.random() * logEntries.length)];
+            log.innerHTML += `> ${entry}<br>`;
+            if (log.innerHTML.split('<br>').length > 6) {
+                log.innerHTML = log.innerHTML.split('<br>').slice(1).join('<br>');
+            }
+        }, 2000);
+
+        function flash() {
+            const l = document.getElementById('lightning');
+            l.style.animation = 'strike 0.4s ease-out';
+            setTimeout(() => { l.style.animation = ''; }, 400);
+        }
+
+        function verify() {
+            const val = document.getElementById('passkey').value.toUpperCase();
+            const msg = document.getElementById('msg');
+            
+            if(val === SECRET) {
+                flash();
+                msg.innerHTML = "ACCESS GRANTED. SYNCING...";
+                msg.style.color = "#00ff66";
+                setTimeout(() => {
+                    document.getElementById('auth-panel').style.transform = "scale(2)";
+                    document.getElementById('auth-panel').style.opacity = "0";
+                    document.getElementById('auth-panel').style.transition = "1s";
+                    const frame = document.getElementById('content-frame');
+                    frame.src = SCRIPT_URL;
+                    setTimeout(() => { frame.style.display = "block"; }, 800);
+                }, 1000);
+            } else {
+                flash();
+                msg.innerHTML = "!! UNAUTHORIZED ACCESS ATTEMPT !!";
+                msg.style.color = "#ff003c";
+                document.getElementById('passkey').value = "";
+            }
+        }
+
+        document.getElementById('passkey').addEventListener('keypress', (e) => { if (e.key === 'Enter') verify(); });
+    </script>
+</body>
+</html>
